clubcontest/src/app/components/competition-day/competition-day.component.css
#mapid {
     height: calc(100vh - 65px); 
     
     margin-top: 65px;
     flex-grow: 100;
     z-index: 98;

}

.invisible{
    height: 0px;
    overflow: hidden;
}

.sidebar{   
    margin-top: 63px;   
    background-color: #FFF;
    height: calc(100vh - 68px);
    left: 0px;
    box-shadow: 0px 2px 9px 0px rgb(109, 109, 109);
    padding:5px 0px 0 0px;   
    flex-grow: 1;
    z-index: 99;
    overflow-y:auto;
    max-width: 500px;
    transition: max-width ease-in 0.2s  ;

}


button.hide-sidebar{
    display: none;
}

@media(max-width:420px){
  .sidebar {
       /* width:419px;*/
  }

  button.hide-sidebar{
    display: block;
}
}

.sidebar.hidden{
    max-width: 0px;
    transition: max-width ease-in 0.2s  ;
}

.flight-list{
    background-color: white;
    padding: 5px 0px 20px 0px;
    font-size: 12px;
    font-family: sans-serif;
    width: 100%;    
    box-sizing: border-box;
}

h2{
    color: #31a8ff;
    font-size: 14px;
    font-weight: normal;
}


.table-header{
display: flex;
    color: #bdbdbd;
    margin: 13px 0 8px 0;
}

form{
    margin: 40px 0 0 0;
}

input[type=file]{
    display: none;
}

.menu{
    display: flex;    
    justify-content: flex-end;
    color:#cccccc;
    background-color: #f1f1f1; 
}


.menu:hover{    
    color:#000;
}

.flight-list-header{
    padding: 0 18px;
}

.uploadSection{
    padding: 0 33px;
}

.competition-day{
    display: flex;
    align-items: stretch;
    height: 100vh
}

.skylines{
       width: 120px;
    height: 41px;
    position: absolute;
    z-index: 9000;
    top: 25px;
    right: 10px;
    background-color: rgba(0, 0, 0, 0.84);
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    padding: 0 5px;
    border-radius: 2px;
    box-shadow: 0 0 3px 0 black;
    text-decoration: none;
}

.skylines svg{
    width: 45px;
    height: 45px;
}


.skylines-description{
       white-space: nowrap;
    padding-right: 8px;
    position: absolute;
    top: -20px;
    color: #000000;
    text-shadow: 0 0 8px white;
    background-color: rgba(255, 255, 255, 0.74);
    padding: 0 6px;
}

.skylines-blue{
    margin-left: 5px;
   box-sizing:border-box;
color:rgb(0, 142, 218);
display:inline;
font-family:Ubuntu, "Helvetica Neue", Helvetica, Arial, sans-serif;
font-size:20px;
font-weight:normal;
line-height:18px;
text-shadow:rgba(0, 0, 0, 0.247059) 0px -1px 0px;
}

.skylines-white{
box-sizing:border-box;
color:rgb(255, 255, 255);
display:inline;
font-family:Ubuntu, "Helvetica Neue", Helvetica, Arial, sans-serif;
font-size:20px;
font-weight:normal;
line-height:18px;
text-shadow:rgba(0, 0, 0, 0.247059) 0px -1px 0px;
}


.grabber{
    position: absolute;
    width: 26px;
    left: 0;
    right: -13px;
    background-color: rgba(255, 255, 255, 0.92);
    z-index: 9999;   
    top: 5px;
    height: 41px;
    box-shadow: 0 0 3px 0 grey;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.slider  {    
    z-index: 1004;
    background-color: rgba(255, 254, 254, 0.82);
    position: absolute;
    bottom: 0;
    width: calc(100% - 53px);
    border-radius: 2px;
    margin: 0 5px 28px;
    height: 61px;
    box-shadow: 0 0 7px 0 #6b6b6b;
        padding: 5px;
    box-sizing: border-box;
}
.slider input{
    width: 99%;
    margin: 0;
}

